# physdes-py

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  coverage.json  debug_test.py  demo_overlap.py  digram.bob  dme_algorithm-slides.html  dme_algorithm-slides.md  environment.yml  essay.md  fyproj2026.md  fyproj2026.md.bad  fyproj2026_cts.md  fyproj2026_cts_2d.md  global_router-slides.html  global_router-slides.md  mulit-fpga-routing.md  mypy.ini  mypy_output.txt  mypy_test_errors.txt  note.md  plot_alpha.py  polygon_test_output.txt  polygon_vs_rpolygon_comparison.html  polygon_vs_rpolygon_comparison.md  presentation_overlap_detection.html  presentation_overlap_detection.md  pyproject.toml  report.md  requirements.txt  rpolygon-slides.html  rpolygon-slides.md  (+8 more)
.benchmarks/: test_area.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: multi-platforms.yml  python-app.yml
.trunk/: logs  trunk.yaml
changelog/: 1.misc.rst  README.md
cpp_ai/: .gitignore  CMakeLists.txt  README.md  xmake.lua
cpp_ai/include/: recti.hpp
cpp_ai/include/recti/: cts.hpp  interval.hpp  manhattan_arc.hpp  point.hpp  polygon.hpp  recti.hpp  router.hpp  rpolygon.hpp  steiner_forest.hpp  vector2.hpp
cpp_ai/src/: example_interval.cpp
cpp_ai/tests/: main.cpp
docs/: Makefile  build_from_md.py  build_remark.py  build_slides.py  conf.py  contributing.md  figures_demo.rst  index.rst  readme.rst  requirements.txt  slides_content.md
docs/essays/: essay.md  polygon_vs_rpolygon_comparison.html  polygon_vs_rpolygon_comparison.md
docs/examples/: plot_cts.py  plot_global_router.py  plot_rectangles.py  plot_rpolygon.py
docs/proposals/: fyproj2026.md  fyproj2026.md.bad  fyproj2026_cts.md  fyproj2026_cts_2d.md
examples/: steiner_forest_grid_example.py  steiner_forest_grid_large_example.py  steiner_forest_simple_example.py
experimental/: convex_decomp_demo.py  rectilinear_voronoi.ipynb  rectilinear_voronoi.py  steiner_forest.py  steiner_forest_grid.py  steiner_forest_grid2.py  steiner_trees_demo.py
requirements/: default.txt  dev.txt  test.txt
rust_ai/: Cargo.toml
rust_ai/src/: cts.rs  generic.rs  interval.rs  lib.rs  manhattan_arc.rs  point.rs  polygon.rs  recti.rs  router.rs  rpolygon.rs  steiner_forest.rs  tests.rs  vector2.rs
src/physdes/: __init__.py  clk_tree_vis.py  dme_algorithm.py  generic.py  halton_int.py  interval.py  manhattan_arc.py  manhattan_arc_3d.py  manhattan_arc_3d.tpy  merge_obj.py  point.py  point.tpy  polygon.py  rdllist.py  recti.py  rpolygon.py  rpolygon_cut.py  skeleton.py  temp  temp.py  test2.ipynb  to_polygon.py  vector2.py  vector2.tpy
src/physdes-py/: skeleton.py
src/physdes/cts/: clk_tree3d_vis.py  clk_tree3d_vis.tpy  clk_tree_vis.py  dme_algorithm.py
src/physdes/router/: global_router.py  global_router3d.py  global_router3d.tpy  router_tree.py  routing_tree.py  routing_tree3d.py  routing_tree3d.tpy  routing_visualizer.py
src/physdes/steiner_forest/: congestion_map.py  steiner_forest.md  steiner_forest.py  steiner_forest_grid.py  steiner_forest_grid2.py
src/physdes_tpy/: skeleton.py
tests/: conftest.py  mysvg.css  test_alpha.py  test_clk_tree_vis.py  test_dme_algorithm.py  test_generic_functions.py  test_geometric_hypothesis.py  test_global_router.py  test_global_router3d.py  test_global_router3d.tpy  test_global_router3d_with_keepouts.py  test_global_router3d_with_keepouts2.py  test_global_router_logic.py  test_global_router_logic3d.tpy  test_global_router_with_keepouts.py  test_global_router_with_keepouts2.py  test_interval.py  test_manhattan_arc_3d.py  test_manhattan_arc_3d.tpy  test_merge.py  test_merge3d.py  test_nearest_point_to.py  test_nearest_point_to.tpy  test_overlap.py  test_point.py  test_point_extended.py  test_point_hypothesis.py  test_polygon.py  test_polygon_convex_decomposition.py  test_polygon_hypothesis.py  test_rdllist.py  test_rect3d.py  test_recti.py  test_recti_hypothesis.py  test_router_tree.py  test_routing_tree.py  test_routing_tree3d.py  test_routing_tree3d.tpy  test_routing_visualizer.py  test_rpolygon.py  (+8 more)
